# canvas

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  REVIEW.md  assemble_coding_agent_context.py  coding_agent_context.txt  pyproject.toml
courses/oop-ai-product-evaluation-101/: README.md  llm_google.py  llm_openai.py  pyproject.toml
courses/oop-ai-product-evaluation-101/buyer_evals/: analyze_all_cases.py  case_runner_bilateral.py  case_runner_unilateral.py  meta_analysis.md  run_all_bilateral_cases.sh
courses/oop-ai-product-evaluation-101/demos/: conversation_1.json  conversation_2.json  conversation_3_intake.json  demo_1_nondeterministic.py  demo_2_nondeterministic.py
courses/oop-ai-product-evaluation-101/intake_agent/: README.md  __init__.py  app.py  config.py  database.py  intake_agent.db  intake_parser.py  schema.sql
courses/oop-ai-product-evaluation-101/llms/: __init__.py  llm_anthropic.py
courses/oop-ai-product-evaluation-101/tests/: __init__.py
data-migrations/: README.md  config.ini  pyproject.toml
data-migrations/data_migrations/: config.ini  tebra.py  utils.py
data-migrations/data_migrations/athena_migration/: create_allergies.py  create_appointments.py  create_conditions.py  create_coverages.py  create_documents.py  create_encounter_documents.py  create_encounter_summary_documents.py  create_immunizations.py  create_lab_reports.py  create_medications.py  create_patients.py  create_vitals.py  join_files.py  move_lab_files.py  separate_allergy_map.py  update_data_migration_notes.py
data-migrations/data_migrations/athenaone_ehi_export_migration/: analyze_data.py  combine_patient_data.py  create_appointments.py  create_documents.py  create_lab_reports.py  create_vitals.py  preprocess.py
data-migrations/data_migrations/avon_migration/: README.md  create_after_visit_summary.py  create_allergies.py  create_appointments.py  create_care_team.py  create_conditions.py  create_consents.py  create_coverages.py  create_documents.py  create_family_history.py  create_future_appointments.py  create_medications.py  create_messages.py  create_notes.py  create_patients.py  create_prescriptions.py  create_vitals.py  update_data_migration_notes.py  utils.py
data-migrations/data_migrations/charm_migration/: create_allergies.py  create_conditions.py  create_conditions_as_surgical_history.py  create_documents.py  create_immunizations.py  create_lab_reports.py  create_medications.py  create_messages.py  create_patients.py  create_questionnaires.py  create_quicknotes.py  create_supplements.py  create_vitals.py  utils.py
data-migrations/data_migrations/chronius_migration/: condtion_helper.py  create_allergies.py  create_appointments.py  create_chart_notes.py  create_conditions.py  create_coverages.py  create_documents.py  create_immunizations.py  create_lab_reports.py  create_medications.py  create_patient_mapping.py  create_patients.py  update_data_migration_notes.py
data-migrations/data_migrations/drchrono_migration/: create_appointments_and_note_pdf.py  create_coverages.py  create_historical_data_imports.py  create_lab_reports.py  create_uncat_documents.py  unstructured_vaccine_ingest.py  utils.py
data-migrations/data_migrations/elation_migration/: create_allergies.py  create_conditions.py  create_coverages.py  create_medications.py  create_patient_mapping.py  update_data_migration_notes.py
data-migrations/data_migrations/icon_migration/: create_allergies.py  create_coverages.py  create_hpi.py
data-migrations/data_migrations/scripts/: fetch_ontologies_codes_and_displays.py
data-migrations/data_migrations/template_migration/: allergy.py  appointment.py  commands.py  condition.py  consent.py  coverage.py  data_migration.py  document_reference.py  family_history.py  hpi.py  icd_10.py  immunization.py  lab_report.py  mapping_review.py  medication.py  message.py  note.py  patient.py  plan.py  questionnaire_response.py  surgical_history.py  utils.py  visual_exam_findings.py  vitals.py
data-migrations/data_migrations/template_migrations/: patient.py
data-migrations/data_migrations/vendor_migration/: __init__.py  create_allergies.py  create_appointments.py  create_conditions.py  create_consents.py  create_coverages.py  create_documents.py  create_family_history.py  create_hpi.py  create_immunizations.py  create_lab_reports.py  create_medications.py  create_messages.py  create_patients.py  (+5 more)
extensions/ai-scribe/: README.md  pyproject.toml
extensions/alert-facility-fields/: .gitignore  pyproject.toml
extensions/auto-submit-clean-claims/: pyproject.toml
extensions/billing-dashboard/: README.md  pyproject.toml
extensions/bp_cpt2/: README.md  extension-readme.md  pyproject.toml
extensions/candid/: GUIDE.md  pyproject.toml
extensions/capture/: mypy.ini  pyproject.toml
extensions/carry-forward/: .gitignore  README.md  pyproject.toml
extensions/cash_pay_profile_field/: CANVAS_MANIFEST.json  README.md  mypy.ini  pyproject.toml
extensions/chart-closure-queue/: .gitignore  pyproject.toml
extensions/chart-command-search/: pyproject.toml
extensions/chronic-care-management-activity-tracker/: README.md  pyproject.toml
extensions/clinical-favorites/: mypy.ini  pyproject.toml
extensions/clinical_pathways/: README.md  SPEC.md  mypy.ini  pyproject.toml
extensions/command-validation/: pyproject.toml
extensions/commit-all-commands-button/: README.md  pyproject.toml
extensions/compound-medication-loader/: CARD.md  README.md  pyproject.toml
extensions/consent-capture/: .gitignore  mypy.ini  pyproject.toml
extensions/conversational_messaging/: README.md  pyproject.toml
extensions/cpt-billing-api/: pyproject.toml
extensions/custom-visit-notes/: README.md  pyproject.toml
extensions/dea-prescriber-filter/: README.md  pyproject.toml
extensions/default_supervising_provider/: README.md  pyproject.toml
extensions/delete-staged-commands-button/: README.md  pyproject.toml
extensions/documentation_only_prescription/: README.md  pyproject.toml
extensions/doxy-in-chart/: pyproject.toml
extensions/duplicate-coding-gap-validation/: pyproject.toml
(+4151 files in other folders)
