# This pyproject.toml is only used for local development and testing.
# The Canvas plugin has its own packaging process that doesn't use this file.

[project]
name = "note-production-dashboard"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "django>=4.2.0",
    "canvas[test-utils]",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.7.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
DJANGO_SETTINGS_MODULE = "canvas_sdk.tests.settings"
addopts = "-v"

[tool.coverage.run]
source = ["note_production_dashboard"]
omit = ["tests/*", "*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
omit = ["tests/*", "*/tests/*"]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
