[tool.poetry]
name = "ai-scribe"
version = "0.1.0"
description = ""
authors = ["Canvas Engineering <engineering@canvasmedical.com>"]
readme = "ai_scribe/README.md"
packages = [
    { include = "ai_scribe" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pytest = "^8.3.3"
rapidfuzz = "^3.10.1"
canvas = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]