[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Some description of your project."
license = "MIT"
name = "auto-submit-clean-claims"
readme = "auto_submit_clean_claims/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
