[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  # Pinned to the unreleased supervising-provider SDK branch (KOALA-5587) until it
  # ships in a canvas release; needed for Claim.supervising_provider / incident_to.
  "canvas[test-utils] @ git+https://github.com/canvas-medical/canvas-plugins.git@feat/sdk-supervising-provider"
]
description = "Canvas plugin that integrates with Candid Health: submits claims, syncs adjudication and patient payment data, and reports patient payments."
license = "MIT"
name = "candid"
readme = "candid/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
