[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Add to a patient's chart from the chart or Provider Companion: capture/upload a document, attach an exam photo to a note, or set the patient's profile picture."
name = "capture"
readme = "capture/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]

[tool.coverage.run]
source = ["capture"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
omit = ["tests/*", "*/tests/*"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
