[project]
name = "chart-command-search"
version = "0.11.0"
description = "Canvas plugin: AI-powered chart search"
requires-python = ">=3.13"
authors = [{ email = "engineering@vicert.com", name = "Vicert Team" }]
dependencies = ["canvas>=0.154.1", "canvas[test-utils]"]
[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.7.0",
    "pytest-mock>=3.12.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "settings"
