# This pyproject.toml is only used for local development and testing.
# The Canvas plugin has its own packaging process that doesn't use this file.

[project]
name = "clinical-favorites"
version = "0.0.0"
requires-python = ">=3.12"
authors = [
  {email = "engineering@vicert.com", name = "Vicert Team"}
]
dependencies = [
    "django>=4.2.0",
    "canvas[test-utils]",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.7.0",
    "pytest-mock>=3.12.0",
]

[tool.coverage.run]
source = ["clinical_favorites"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
omit = ["tests/*", "*/tests/*"]
