[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "A protocol that adds a button in the note footer to commit all uncommitted commands in a Note."
license = "MIT"
name = "commit_all_commands_button"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
source = ["commit_all_commands_button"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
omit = ["tests/*", "*/tests/*"]
