[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  # Pinned to the unreleased supervising-provider SDK branch (KOALA-5587) until it
  # ships in a canvas release; needed for Staff.default_supervising_provider and the
  # Note effect's supervising_provider_id.
  "canvas[test-utils] @ git+https://github.com/canvas-medical/canvas-plugins.git@feat/sdk-supervising-provider"
]
description = "Reference plugin: default a note's supervising provider from the rendering provider's Staff record on note creation."
license = "MIT"
name = "default_supervising_provider"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
